# spseg

./: .gitattributes  LICENSE  Makefile  README.md  pyproject.toml  setup.py
spseg/scannet/: __init__.py  main.py
src/scannet/: api.cpp  segmenter.cpp
test/: test.ipynb
