[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "torch>=1.0.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "torch-spseg"
version = "1.0"
authors = [
  { name="Zijian Yu", email="yzj18@mail.ustc.edu.cn" },
]
description = "Superpoint Segmenter with C++/CUDA extensions"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "torch>=1.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["spseg*"]